namespace CardGameEngine
{
    public class Card
    {
        
    }
}